<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
		xmlns:android="http://schemas.android.com/apk/res/android">
<ListPreference
    android:key="mode"
    android:title="@string/mode_title"
    android:dialogTitle="@string/mode_dialog_title"
    android:entries="@array/mode_entries"
    android:entryValues="@array/mode_values"
    android:defaultValue="0" />
<ListPreference
    android:key="emergency"
    android:title="@string/emergency_title"
    android:dialogTitle="@string/emergency_dialog_title"
    android:entries="@array/emergency_entries"
    android:entryValues="@array/emergency_values"
    android:defaultValue="0" />
<PreferenceScreen
    android:key="donation"
    android:title="@string/donation_title"
    android:summary="@string/donation_summary"
    />
</PreferenceScreen>
